--- a/templates/create_test_alias.html
+++ b/templates/create_test_alias.html
@@ -28,6 +28,9 @@
         <button id="submit" type="submit" class="submit">Submit</button>
     </form>
 </div>
+
+<script src="http://code.jquery.com/jquery.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 
 </html>
