--- a/templates/create_alias_and_show_test_form.html
+++ b/templates/create_alias_and_show_test_form.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<script src="http://code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 
